add "thanks" section at the end of the sponsor page

--- a/content/about/sponsors.html
+++ b/content/about/sponsors.html
@@ -43,3 +43,15 @@ FOSDEM would not be possible without the generous help of our sponsors
 	</tbody>
 </table>
 
+<hr />
+
+<h1>Thanks</h1>
+
+<h2><a href="http://www.ulb.ac.be/">Universite Libre de Bruxelles</a></h2>
+<p> The Université Libre de Bruxelles (or ULB) is a French-speaking university
+in Brussels, Belgium. It has about 20,000 students. They provide us with the
+location.</p>
+
+<h2><a href="http://www.cerkinfo.be/">Cercle Informatique ULB</a></h2>
+<p>The "Cercle Informatique ULB" is a group of students who help us booking and using ULB rooms during FOSDEM.</p>
+
