rename the nosponsors attribute to no_sponsors

--- a/content/about/sponsors.html
+++ b/content/about/sponsors.html
@@ -1,11 +1,14 @@
 ---
 title: Sponsors
 navorder: 20
-nosponsors: true
+no_sponsors: true
 sponsors_root: true
 ---
 <p>
-FOSDEM would not be possible without the generous help of our sponsors
+FOSDEM would not be possible without the generous help of our sponsors.
+</p>
+<p>
+Thank you very much!
 </p>
 <div id="sponsors-quick-links">
     <% sponsors.reverse.each do |s| %>
