enhance sponsors table

--- a/content/about/sponsors.html
+++ b/content/about/sponsors.html
@@ -26,7 +26,7 @@ Thank you very much!
 
 <h3>In alphabetical order:</h3>
 
-<table>
+<table id="sponsors">
 	<tbody>
         <% sponsors.each do |s| %>
 		<tr>
