--- a/content/practical/beerevent.html
+++ b/content/practical/beerevent.html
@@ -87,5 +87,5 @@ A lot of work has gone into making this beer event the best ever. We've taken in
 <h2>Contact and location</h2>
 <p>If you manage to get lost somehow, despite this handy little map, <a href="http://blog.sejo.be/about/">call Jochen</a>. He might not be able to help you find the way, but he should be able to find someone who can! <code>:-)</code></p>
 
-<div align="center"><a href="http://osm.org/go/0EoTgZPpj-"><img src="/assets/images/beermap.png" width="548" height="341"/></a></div>
+<div align="center"><a href="http://osm.org/go/0EoTgZPpj-"><img src="asset:beermap" width="548" height="341"/></a></div>
 
