--- a/content/about/sponsors.html
+++ b/content/about/sponsors.html
@@ -11,7 +11,7 @@ FOSDEM would not be possible without the generous help of our sponsors.
 Thank you very much!
 </p>
 <div id="sponsors-quick-links">
-    <% sponsors.reverse.each do |s| %>
+    <% sponsors.select{|s| s.include_in_toplevel? }.reverse.each do |s| %>
 	<a href="#<%= s.id %>">
 		<% if s.thumb? then %>
         <img src="<%= s.thumb %>" alt="<%= s.name %>"/>
@@ -24,11 +24,31 @@ Thank you very much!
 
 <hr />
 
-<h3>In alphabetical order:</h3>
+<% [
+{
+:title => '<h3>In alphabetical order</h3>',
+:id => 'sponsors',
+:section => '',
+},
+{
+:title => '<h1>Thanks</h1>',
+:id => 'thanks',
+:section => 'thanks',
+},
+].each_with_index do |section, index|
+%>
+<% unless index == 0 %>
+<hr />
+<% end %>
 
-<table id="sponsors">
+<%= section[:title] %>
+
+<table id="<%= section[:id] %>">
 	<tbody>
-        <% sponsors.each do |s| %>
+        <%
+        sponsors
+        .select{|s| section[:section] == s.section }
+        .each do |s| %>
 		<tr>
 			<td colspan="2">
                 <h2><a name="#<%= s.id %>" id="<%= s.id %>"></a><a href="<%= s.url %>"><%= s.name %></a></h2>
@@ -38,7 +58,13 @@ Thank you very much!
             <td><%= s.propaganda %><br/><br/></td>
             <td>
                 <% if s.logo? then %>
+                <% if s.url? then %>
+                <a href="<%= s.url %>" alt="<%= s.url %>" title="<%= s.name %> website">
+                <% end %>
                 <img src="<%= s.logo %>"/>
+                <% if s.url? then %>
+                </a>
+                <% end %>
                 <% end %>
             </td>
 		</tr>
@@ -46,15 +72,4 @@ Thank you very much!
 	</tbody>
 </table>
 
-<hr />
-
-<h1>Thanks</h1>
-
-<h2><a href="http://www.ulb.ac.be/">Universite Libre de Bruxelles</a></h2>
-<p> The Université Libre de Bruxelles (or ULB) is a French-speaking university
-in Brussels, Belgium. It has about 20,000 students. They provide us with the
-location.</p>
-
-<h2><a href="http://www.cerkinfo.be/">Cercle Informatique ULB</a></h2>
-<p>The "Cercle Informatique ULB" is a group of students who help us booking and using ULB rooms during FOSDEM.</p>
-
+<% end %>
