add link for schedule in navigation

--- a/content/schedule.html
+++ b/content/schedule.html
@@ -1,6 +1,7 @@
 ---
 title: Schedule
 sponsors_under_navigation: true
+navcat: true
 ---
 <% require 'time' %>
 <p>There are several kinds of activities going on at every edition of FOSDEM,
