--- a/content/schedule/events.html
+++ b/content/schedule/events.html
@@ -1,11 +1,8 @@
 ---
 title: Events
-no_sponsors: true
+sponsors_under_navigation: true
 ---
-<%
-tracks = @items.select{|i| i.identifier =~ %r{^/schedule/track/.+}}
-i = 0
-%>
+<% i = 0 %>
 <table class="table table-striped table-bordered table-condensed">
     <thead>
         <tr>
@@ -18,19 +15,19 @@ i = 0
         </tr>
     </thead>
     <tbody>
-        <% tracks.reject{|t| t[:events].empty?}.sort_by{|t| [t[:rank], t[:track_id]]}.each do |track| %>
+        <% tracks.reject(&$empty_track).sort_by{|t| [t[:rank], t[:conference_track_id]]}.each do |track| %>
         <tr>
-            <td colspan="6"><h4><%= track[:conference_track] %></h4></td>
+            <td colspan="6"><h4><%= track[:title] %></h4></td>
         </tr>
         <%
-        track[:events].map{|slug| $item_by_id.fetch("/schedule/event/#{slug}/")}.each do |e|
+        track[:events].map(&$to_event).each do |e|
         i += 1
         %>
         <tr>
-            <td><a href="/schedule/event/<%= e[:slug] %>/"><%= e[:title] %></a></td>
-            <td><%= e[:speakers].map{|slug| $item_by_id.fetch("/schedule/speaker/#{slug}/")}.map{|s| "<a href=\"/schedule/speaker/#{s[:slug]}/\">#{s[:title]}</a>"}.join(", ") %></td>
-            <td><a href="/schedule/room/#{e[:room]}/"><%= e[:room_name] %></a></td>
-            <td><a href="/schedule/day/#{e[:day]}/"><%= e[:day_name] %></a></td>
+            <td><%= l(e) %></a></td>
+            <td><%= l e[:speakers].map(&$to_speaker) %></td>
+            <td><%= l room e[:room] %></td>
+            <td><%= l day e[:day] %></td>
             <td><%= e[:start_time] %></td>
             <td><%= e[:end_time] %></td>
         </tr>
