--- a/content/schedule/rooms.html
+++ b/content/schedule/rooms.html
@@ -2,10 +2,6 @@
 title: Rooms
 no_sponsors: true
 ---
-<%
-days = @items.select{|i| i.identifier =~ %r{^/schedule/day/.+}}.sort_by{|d| d[:conference_day]}
-rooms = @items.select{|i| i.identifier =~ %r{^/schedule/room/.+}}.sort_by{|r| [r[:rank], r[:conference_room_id]]}
-%>
 <table class="table table-striped table-bordered table-condensed">
     <thead>
         <tr>
@@ -17,15 +13,13 @@ rooms = @items.select{|i| i.identifier =~ %r{^/schedule/room/.+}}.sort_by{|r| [r
         </tr>
     </thead>
     <tbody>
-        <%
-        rooms.each do |r|
-        %>
+        <% rooms.each do |r| %>
         <tr>
-            <td><a href="<%= r.path %>"><%= r[:title] %></a></td>
+            <td><%= l(r) %>
             <td><%= r[:size] %></td>
             <%
             days.each do |d|
-            dayevents = r[:events_by_day].fetch(d[:slug], []).map{|slug| $item_by_id.fetch("/schedule/event/#{slug}/")}
+            dayevents = r[:events_by_day].fetch(d[:slug], []).map(&$to_event)
             %>
             <% if dayevents.empty? %>
             <td>-</td>
@@ -33,9 +27,9 @@ rooms = @items.select{|i| i.identifier =~ %r{^/schedule/room/.+}}.sort_by{|r| [r
             <%
             first = dayevents.map{|e| e[:start_time]}.sort.first[:start_time]
             last  = dayevents.map{|e| e[:end_time]}.sort.last[:end_time]
-            daytrack = dayevents.map{|e| e[:conference_track_id]}.uniq.map{|slug| $item_by_id.fetch("/schedule/track/#{slug}/")}.first
+            daytrack = dayevents.map{|e| e[:conference_track_id]}.uniq.map(&$to_track).first
             %>
-            <td><%= s %>-<%= e %><% if t %>: <a href="<%= t.path %>"><%= t[:name] %></a><% end %></td>
+            <td><%= s %>-<%= e %><% if t %>: <%= l t, :name %><% end %></td>
             <% end %>
             <% end %>
         </tr>
