--- a/content/schedule/tracks.html
+++ b/content/schedule/tracks.html
@@ -1,11 +1,7 @@
 ---
 title: Tracks
-no_sponsors: true
+sponsors_under_navigation: true
 ---
-<%
-tracks = @items.select{|i| i.identifier =~ %r{^/schedule/track/.+}}.sort_by{|t| [t[:rank], t[:conference_track_id]]}
-days = @items.select{|i| i.identifier =~ %r{^/schedule/day/.+}}.sort_by{|d| d[:conference_day]}
-%>
 <table class="table table-striped table-bordered table-condensed">
     <thead>
         <tr>
@@ -18,23 +14,49 @@ days = @items.select{|i| i.identifier =~ %r{^/schedule/day/.+}}.sort_by{|d| d[:c
     </thead>
     <tbody>
         <%
-        tracks.each do |t|
-        events = t[:events].map{|slug| $item_by_id.fetch("/schedule/event/#{slug}/")}
-        %>
-        <tr>
-            <td><a href="<%= t.path %>"><%= t[:title] %></a></td>
-            <td><%= events.map{|e| e[:room]}.uniq.map{|id| $item_by_id.fetch("/schedule/room/#{id}/")}.sort_by{|r| [r[:rank], r[:conference_room_id]]}.map{|r| "<a href=\"#{r.path}\">#{r[:title]}</a>"}.join(", ") %></td>
-            <% days.each do |d| %>
-            <td><%=
-                events_that_day = events.select{|e| e[:conference_day_id] == d[:conference_day_id]}
-                if events_that_day.empty?
-                "-"
-                else
-                "#{events_that_day.sort_by{|e| e[:start_time]}.first[:start_time]} - #{events_that_day.sort_by{|e| e[:end_time]}.last[:end_time]}"
-                end
-                %></td>
+            [
+                {type: "keynote"},
+                {type: "lightningtalk"},
+                {type: "certification"},
+                {heading: "Main Tracks", type: "maintrack"},
+                {heading: "Devrooms", type: "devroom"},
+            ].each do |duty|
+                list = tracks.select{|t| t[:type] == duty[:type]}
+            %>
+            <% unless list.empty?  %>
+                <% if duty[:heading] %>
+                    <tr>
+                        <th colspan="<%= 2 + days.size %>"><h4><%= duty[:heading] %></h4></th>
+                    </tr>
+                <% end %>
+                <%
+                    list.each do |t|
+                        events = t[:events].map &$to_event
+                    %>
+                    <% if events.empty? %>
+                        <% if duty[:heading] %>
+                            <tr>
+                                <td colspan"<%= 2 + days.size %>">(no events are confirmed in this category yet)</td>
+                            </tr>
+                        <% end %>
+                    <% else %>
+                        <tr>
+                            <td><%= l t, :name %></td>
+                            <td><%= l events.map{|e| e[:room]}.uniq.map(&$to_room).sort_by{|r| [r[:rank], r[:conference_room_id]]} %></td>
+                            <% days.each do |d| %>
+                                <td><%=
+                                events_that_day = events.select{|e| e[:conference_day_id] == d[:conference_day_id]}
+                                if events_that_day.empty?
+                                    "-"
+                                else
+                                    "#{events_that_day.sort_by{|e| e[:start_time]}.first[:start_time]} - #{events_that_day.sort_by{|e| e[:end_time]}.last[:end_time]}"
+                                end
+                                %></td>
+                            <% end #days %>
+                        </tr>
+                    <% end %>
+                <% end %>
             <% end %>
-        </tr>
         <% end %>
     </tbody>
 </table>
