--- a/content/schedule/rooms.html
+++ b/content/schedule/rooms.html
@@ -1,6 +1,6 @@
 ---
 title: Rooms
-no_sponsors: true
+sponsors_under_navigation: true
 ---
 <table class="table table-striped table-bordered table-condensed">
     <thead>
@@ -13,23 +13,23 @@ no_sponsors: true
         </tr>
     </thead>
     <tbody>
-        <% rooms.each do |r| %>
+        <% rooms.reject{|r| r[:events].empty?}.each do |r| %>
         <tr>
             <td><%= l(r) %>
             <td><%= r[:size] %></td>
             <%
             days.each do |d|
-            dayevents = r[:events_by_day].fetch(d[:slug], []).map(&$to_event)
+            dayevents = r[:events_by_day].fetch(d[:slug].to_sym, []).map(&$to_event)
             %>
             <% if dayevents.empty? %>
             <td>-</td>
             <% else %>
             <%
-            first = dayevents.map{|e| e[:start_time]}.sort.first[:start_time]
-            last  = dayevents.map{|e| e[:end_time]}.sort.last[:end_time]
-            daytrack = dayevents.map{|e| e[:conference_track_id]}.uniq.map(&$to_track).first
+            first = dayevents.map{|e| e[:start_time]}.sort.first
+            last  = dayevents.map{|e| e[:end_time]}.sort.last
+            daytracks = dayevents.map{|e| e[:track]}.uniq.map(&$to_track).sort_by{|t| [t[:rank], t[:conference_track_id]]}
             %>
-            <td><%= s %>-<%= e %><% if t %>: <%= l t, :name %><% end %></td>
+            <td><%= first %>-<%= last %><% unless daytracks.empty? %>: <%= l daytracks, :name %><% end %></td>
             <% end %>
             <% end %>
         </tr>
