--- a/content/schedule.html
+++ b/content/schedule.html
@@ -53,9 +53,9 @@ during the event.</p>
           <td><%= l e %></td>
             <td><%=
                 e[:speakers].map{|s| $item_by_id.fetch("/schedule/speaker/#{s}/")}.map do |s|
-                photo = s[:thumbnail] ? $item_by_id.fetch("/photos/thumbnail/#{s[:thumbnail][:slug]}/") : nil
+                photo = s[:thumbnail] ? $item_by_id.fetch("/photos/thumbnail/#{s[:thumbnail].fetch(:slug)}/") : nil
                 text = ""
-                text << "<img src=\"#{photo.path}\" width=\"#{s[:thumbnail]['width']}\" height=\"#{s[:thumbnail]['height']}\"/>" if photo
+                text << "<img src=\"#{photo.path}\" width=\"#{s[:thumbnail].fetch(:width)}\" height=\"#{s[:thumbnail].fetch(:height)}\"/>" if photo
                 text << l(s)
                 text
                 end.join(", ")
