--- a/content/interviews.html
+++ b/content/interviews.html
@@ -5,7 +5,7 @@ navtitle: Interviews
 
 <p>Every edition of FOSDEM, we conduct a short interview with the main track and keynote speakers.</p>
 
-<% @items.select{|i| i.interview? and not i[:disabled]}.sort_by{|i| i[:year]}.reverse.group_by{|i| i[:year]}.each do |year, items| %>
+<% @items.select{|i| interview?(i) and not i[:disabled]}.sort_by{|i| i[:year]}.reverse.group_by{|i| i[:year]}.each do |year, items| %>
 <% unless items.empty? %>
 <h2><%= year %></h2>
 <ul>
