--- a/content/schedule.html
+++ b/content/schedule.html
@@ -10,11 +10,11 @@ days = @items.select{|i| i.identifier =~ %r{/schedule/day/.+}}
 speakers = @items.select{|i| i.identifier =~ %r{/schedule/speaker/.+}}
 events = @items.select{|i| i.identifier =~ %r{/schedule/event/.+}}
 tracks = @items.select{|i| i.identifier =~ %r{/schedule/track/.+}}
-keynotes = events.select{|e| e[:type] == 'keynote'}.sort_by{|e| e[:start]}
+keynotes = events.select{|e| e[:type] == 'keynote'}.sort_by{|e| e[:start_datetime]}
 maintracks = tracks.select{|t| t[:type] == 'maintrack'}.sort_by{|t| [ t[:rank], t[:conference_track_id] ] }
 devrooms = tracks.select{|t| t[:type] == 'devroom'}.sort_by{|t| [ t[:rank], t[:conference_track_id] ] }
 lt_track = tracks.select{|t| t[:type] == 'lightningtalk'}.first
-ltalks = events.select{|e| e[:type] == 'lightningtalk'}.sort_by{|e| e[:start]}
+ltalks = events.select{|e| e[:type] == 'lightningtalk'}.sort_by{|e| e[:start_datetime]}
 %>
 <p>There are several kinds of activities going on at every edition of FOSDEM,
 which are outlined here, with links to various bits of information about the
@@ -24,6 +24,15 @@ schedule.</p>
 and <%= tracks.size %> tracks, but
 we do our best to provide you with as much information and navigation
 options about the schedule as we can.</p>
+
+<p>Activities take place in all of
+<a href="<%= $item_by_id.fetch('/schedule/roomtracks/').path %>"> the <%= rooms.size %> rooms</a>
+that are spread across several buildings or clusters of rooms of
+<a href="<%= $item_by_id.fetch('/practical/transportation/').path %>">the Campus Solbosch of the ULB (Université Libre de Bruxelles)</a>
+.<br/>
+An <a href="<%= $item_by_id.fetch('/schedule/roomtracks/').path %>">overview of the room occupation by track</a>
+is available, too.</p>
+
 <p>There are essentially five different categories of sessions and activities
 held at FOSDEM, which are detailed below: <a href="#keynotes">Keynotes</a>,
 <a href="#maintracks">Main Tracks</a>, <a href="#devrooms">Developer Rooms</a>,
@@ -55,7 +64,7 @@ during the event.</p>
                 e[:speakers].map{|s| $item_by_id.fetch("/schedule/speaker/#{s}/")}.map do |s|
                 photo = s[:thumbnail] ? $item_by_id.fetch("/photos/thumbnail/#{s[:thumbnail].fetch(:slug)}/") : nil
                 text = ""
-                text << "<img src=\"#{photo.path}\" width=\"#{s[:thumbnail].fetch(:width)}\" height=\"#{s[:thumbnail].fetch(:height)}\"/>" if photo
+                text << "<img class=\"thumb\" src=\"#{photo.path}\" width=\"#{s[:thumbnail].fetch(:width)}\" height=\"#{s[:thumbnail].fetch(:height)}\"/>" if photo
                 text << l(s)
                 text
                 end.join(", ")
