--- a/content/schedule/rooms.html
+++ b/content/schedule/rooms.html
@@ -2,9 +2,12 @@
 title: Rooms
 sponsors_under_navigation: true
 ---
+<p>An overview of <a href="<% $item_by_id.fetch('/schedule/roomtracks/').path %>">room occupation by track</a>
+is available, too.</p>
 <table class="table table-striped table-bordered table-condensed">
     <thead>
         <tr>
+            <th></th>
             <th>Room</th>
             <th>Seats</th>
             <% days.each do |d| %>
@@ -13,8 +16,16 @@ sponsors_under_navigation: true
         </tr>
     </thead>
     <tbody>
-        <% rooms.reject{|r| r[:events].empty?}.each do |r| %>
+        <%
+        $buildings.each do |b, brooms|
+        brooms = brooms.reject{|r| r[:events].empty?}.sort_by{|r| [r[:rank], r[:conference_room_id]]}
+        unless brooms.empty?
+        brooms.each_with_index do |r, i|
+        %>
         <tr>
+            <% if i == 0 %>
+            <th class="building" rowspan="<%= brooms.size %>"><%= b %></th>
+            <% end %>
             <td><%= l(r) %>
             <td><%= r[:size] %></td>
             <%
@@ -30,9 +41,11 @@ sponsors_under_navigation: true
             daytracks = dayevents.map{|e| e[:track]}.uniq.map(&$to_track).sort_by{|t| [t[:start_time].fetch(d[:slug].to_sym), t[:rank], t[:conference_track_id]]}
             %>
             <td><%= first %>-<%= last %><% unless daytracks.empty? %>: <%= l daytracks, :name %><% end %></td>
-            <% end %>
-            <% end %>
+            <% end # if %>
+            <% end # d %>
         </tr>
-        <% end %>
+        <% end # brooms %>
+        <% end # rooms %>
+        <% end # buildings %>
     </tbody>
 </table>
