--- a/content/schedule/rooms.html
+++ b/content/schedule/rooms.html
@@ -2,7 +2,7 @@
 title: Rooms
 sponsors_under_navigation: true
 ---
-<p>An overview of <a href="<% $item_by_id.fetch('/schedule/roomtracks/').path %>">room occupation by track</a>
+<p>An overview of <a href="<%= $item_by_id.fetch('/schedule/roomtracks/').path %>">room occupation by track</a>
 is available, too.</p>
 <table class="table table-striped table-bordered table-condensed">
     <thead>
