--- a/content/schedule.html
+++ b/content/schedule.html
@@ -26,7 +26,7 @@ we do our best to provide you with as much information and navigation
 options about the schedule as we can.</p>
 
 <p>Activities take place in all of
-<a href="<%= $item_by_id.fetch('/schedule/roomtracks/').path %>"> the <%= rooms.size %> rooms</a>
+<a href="<%= $item_by_id.fetch('/schedule/rooms/').path %>"> the <%= rooms.size %> rooms</a>
 that are spread across several buildings or clusters of rooms of
 <a href="<%= $item_by_id.fetch('/practical/transportation/').path %>">the Campus Solbosch of the ULB (Université Libre de Bruxelles)</a>
 .<br/>
