applied changes as requested by tias: new motto, move sponsors under navigation on transportation page, remove events and speakers from schedule navigation and add saturday and sunday instead

--- a/content/index.html
+++ b/content/index.html
@@ -5,8 +5,8 @@ maxnews: 10
 nohead: true
 ---
 <div class="well">
-    <p>FOSDEM is the biggest free and non-commercial event organized by and for the community.</p>
-    <p>Its goal is to provide Free and Open Source developers a place to meet.</p>
+    <p>FOSDEM is a free event that offers open source communities a place to meet, share ideas and collaborate.</p>
+    <p>It is renowed for being highly developer-oriented and brings together 5000+ geeks from all over the world.</p>
     <p><span class="label label-info">No registration necessary.</span></p>
 </div>
 <div>
