--- a/content/practical/transportation.html
+++ b/content/practical/transportation.html
@@ -1,6 +1,7 @@
 ---
 title: Transportation
 navtitle: Venue & travel
+sponsors_under_navigation: true
 ---
 <p>FOSDEM will take place at the ULB Campus Solbosch, Brussels, Belgium, Europe, Earth.</p>
 
