--- a/content/practical/transportation.html
+++ b/content/practical/transportation.html
@@ -5,7 +5,7 @@ sponsors_under_navigation: true
 ---
 <p>FOSDEM will take place at the ULB Campus Solbosch, Brussels, Belgium, Europe, Earth.</p>
 
-<a href="asset:campusmap" style="float: right; text-align: right"><img src="asset:campusmap-thumbnail" alt="ULB Campus Solbosh map: Location of FOSDEM" title="ULB Campus Solbosh map: Location of FOSDEM" />
+<a href="asset:campusmap" style="float: right; text-align: right"><%= img asset('campusmap-thumbnail'), {alt: "ULB Campus Solbosh map: Location of FOSDEM", title: "ULB Campus Solbosh map: Location of FOSDEM"} %>
 <br />(Click for larger version)</a>
 
 <p>
