navigation: two items into one for the time tables

--- a/content/schedule/days.html
+++ b/content/schedule/days.html
@@ -1,5 +1,5 @@
 ---
-title: Time tables
+title: Time Tables
 ---
 <p>Time tables are available for the following day<%= days.size > 1 ? "s" : "" %>:</p>
 <ul>
