--- a/content/practical/beerevent.html
+++ b/content/practical/beerevent.html
@@ -59,7 +59,10 @@ trick, as does mentioning the name FOSDEM.
 </p>
 
 <h2>Beer Tokens</h2>
-<p>Tokens are 3EUR each. One token, one beer. For the sake of simplicity, "soda" (cola, lemonade, etc) is beer too -- at least as far as tokens are concerned. Tokens may be bought individually, but FOSDEM staff prefers to deal with paper money rather than metal money.  It's lighter and easier to sort.</p>
+<p>Tokens are 3 EUR each. One token, one beer. For the sake of simplicity,
+"soda" (cola, lemonade, etc) is beer too -- at least as far as tokens are
+concerned. Tokens may be bought individually, but FOSDEM staff prefers to deal
+with paper money rather than metal money.  It's lighter and easier to sort.</p>
 
 <p>When you arrive at the bar, find a member of FOSDEM staff (look for flashy yellow and orange tshirts). In exchange for money, you will receive "beer tokens".</p>
 
