--- a/content/distrominiconf.html
+++ b/content/distrominiconf.html
@@ -1,7 +1,7 @@
 ---
 title: Distribution Miniconf
 ---
-<p>At <%= conference[:title] %>, the Distribution Miniconf will be at its fourth iteration.</p>
+<p>At <%= conference()[:title] %>, the Distribution Miniconf will be at its fourth iteration.</p>
 
 <p>Subscribe to the <a href="http://lists.fosdem.org/mailman/listinfo/distributions">mailinglist</a> to join the discussion.</p>
 
