add searcher webapp

--- a/content/interviews/2007-kristian+hoegsberg.html
+++ b/content/interviews/2007-kristian+hoegsberg.html
@@ -1,7 +1,7 @@
 ---
 year: 2007
-person: Kristian HÃ¸gsberg
-slug: kristian_hÃ¸gsberg
+person: Kristian Høgsberg
+slug: kristian_høsberg
 ---
 <p>
 Learn from AIGLX creator Kristian HÃ¸gsberg what he thinks is important in the world of desktop 3D and... FireWire!
