--- a/content/sponsors_navigation.html
+++ b/content/sponsors_navigation.html
@@ -2,8 +2,12 @@
 layout: false
 relativize: false
 ---
+<%
+  cornerstone_sponsors, other_sponsors = sponsors.select{|s| s.include_in_toplevel?}.partition{|s| s.cornerstone?}
+%>
+<% unless cornerstone_sponsors.empty? %>
 <li class="nav-header">Cornerstone Sponsors</li>
-<% sponsors.select{|s| s.include_in_toplevel? and s.cornerstone?}.each do |s| %>
+<% cornerstone_sponsors.each do |s| %>
     <a href="<%= s.path %>">
         <%
         if s.logo?
@@ -21,14 +25,16 @@ relativize: false
                    hit
                  end
         %>
-        <img src="<%= s.logo %>" height="<%= h %>" width="<%= w %>" alt="<%= s.name %>" title="<%= s.name %>"/>
+        <img src="<%= s.logo %>" class="sponsor-box-logo" height="<%= h %>" width="<%= w %>" alt="<%= s.name %>" title="<%= s.name %>"/>
         <% else %>
             <%= s.name %>
         <% end %>
     </a>
 <% end %>
+<% end %>
+<% unless other_sponsors.empty? %>
 <li class="nav-header">Other Sponsors</li>
-<% sponsors.select{|s| s.include_in_toplevel? and (not s.cornerstone?)}.each do |s| %>
+<% other_sponsors.each do |s| %>
     <a href="<%= s.path %>">
         <%
         if s.thumb?
@@ -47,9 +53,10 @@ relativize: false
                  end
         %>
 
-        <img src="<%= s.thumb %>" width="<%= w %>" height="<%= h %>" alt="<%= s.name %>" title="<%= s.name %>"/>
+        <img src="<%= s.thumb %>" class="sponsor-box-logo" width="<%= w %>" height="<%= h %>" alt="<%= s.name %>" title="<%= s.name %>"/>
         <% else %>
             <%= s.name %>
         <% end %>
     </a>
+<% end %>
 <% end %>
