track timetables + devroom descriptions

--- a/content/schedule/days.html
+++ b/content/schedule/days.html
@@ -7,3 +7,6 @@ title: Time Tables
     <li><%= l day %></li>
     <% end %>
 </ul>
+
+<p>The following page gives a graphical overview of which tracks are taking place when and where:
+<%= l '/schedule/roomtracks/' %></p>
