--- a/content/schedule/roomtracks.html
+++ b/content/schedule/roomtracks.html
@@ -5,80 +5,14 @@ sponsors_under_navigation: true
 <p>For a less graphical and colorful overview of the rooms and the tracks that are held in them, respectively, you may <a href="<%= pathof '/schedule/rooms/' %>">look at this page instead</a>.
 <%
 # vim: set ft=eruby ts=2 sw=2 et ai:
-
 colors = 5
-compress = true
-
-days.each do |d|
-
-  interval = $timetable.fetch(d[:slug]).fetch(:interval)
-
-  flatlist_by_room = begin
-                       h = {}
-                       $timetable.fetch(d[:slug]).fetch(:by_room).each do |room, time_cells|
-                         h[room] = begin
-                                     clusters = []
-                                     cells = time_cells.values.map(&:first)
-                                     cells.each do |cell|
-                                       if cell.nil?
-                                         clusters << nil
-                                       elsif cell[:state] == :begin
-                                         clusters << cell
-                                       end
-                                     end
-
-                                     if compress
-                                       cc = []
-                                       i = 0
-                                       while i < clusters.size
-                                         cell = clusters[i]
-                                         if cell.nil?
-                                           cc << nil
-                                           i += 1
-                                         else
-                                           j = i + 1
-                                           xs = 0
-                                           xn = 0
-                                           xm = 0
-                                           while j < clusters.size and xn < (60 / interval)
-                                             fcell = clusters[j]
-                                             if fcell.nil?
-                                               xn += 1
-                                             elsif fcell[:track] == cell[:track]
-                                               xm += 1
-                                               xs += fcell[:slots]
-                                               xs += xn
-                                               xn = 0
-                                             else
-                                               break
-                                             end
-                                             j += 1
-                                           end
-                                           if xm > 0
-                                             cc << { track: cell[:track], slots: cell[:slots] + xs}
-                                             (0..xn-1).each do |n|
-                                               cc << nil
-                                             end
-                                             i = j
-                                           else
-                                             cc << cell
-                                             i += 1
-                                           end
-                                         end
-                                       end
-                                       cc
-                                     else
-                                       clusters
-                                     end
-                                   end
-                       end
-                       h
-                     end
-
+$compressed_flatlist.each do |dayslug, flatlist_by_room|
+  d = $to_day.call(dayslug)
 %>
 <a name="<%= d[:slug] %>"></a><h2><%= d[:title] %></h2>
 <table class="table table-striped table-bordered table-condensed roomtracks">
   <%
+    interval = $timetable.fetch(d[:slug]).fetch(:interval)
     start = Time.parse(d[:start_time])
     start_hour = start.hour
     start_offset_slots = start.min / interval
